<resources>
    <string name="app_name">NYT Movies</string>

    <string name="action_search">Search</string>

    <string name="tv_title">Isadora\'s Children</string>
    <string name="tv_nytm_detail_link">See More: <s>%s</s></string>
    <string name="byLine">By %s</string>
    <string name="tv_nytm_detail_mpaaRating">Film Rating: %s</string>
    <string name="tv_nytm_detail_publicationDate">Published %s</string>
    <string name="tv_nytm_detail_summaryShort">The work of a 20th-century dance innovator inspires four women of the present day in this film, composed like a piece of music by Damien Manivel. | %s</string>

    <string name="msg_Erro404">404 - Server not responding</string>
    <string name="msg_Erro500">500 - Server not find</string>
    <string name="msg_ErroGenerico">Unknown Error</string>
    <string name="msg_ErroTimeout">The server did not respond in a timely manner, restart the application or try later</string>
    <string name="msg_ErroOBJJson">Invalid JSON Structure</string>

    <string name="exception_timeout">SocketTimeoutException</string>
    <string name="exception_json_objreturn">IllegalStateException: Expected BEGIN_ARRAY but was BEGIN_OBJECT</string>

    <string name="chooser_your_webNav">Choose your web browser</string>
    <string name="chooser_your_sharedApp">Choose your app what you want shared this your movie</string>
    <string name="toast_unfavorite">"%s is not your favorite movie"</string>
    <string name="toast_favorite">%s is your favorite movie</string>
    <string name="toast_noHaveBrowser">There is no browser installed on your device</string>
    <string name="toast_content_notAvail">Content not available</string>
    <string name="tv_nytm_detail_updatedDate">Updated %s</string>
    <string name="tv_headLine">Isadora’s Children’ Review: Variations on Sorrow</string>
    <string name="msg_low_network">Your connection is bad or slow, please connect to a better network</string>
    <string name="msg_no_network">Check your device\'s network connection</string>

</resources>
